--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ https://templatemo.com/tm-531-reflux
                     Hi, I'm Chen-Lung Eric Lu and I'm a Roboticist. Robots fascinated me with how similar it is with humans. I've been the Team Lead of Team NCTU for the DARPA Subterranean Challenge for the last two events (Urban and Tunnel). Now I'm working on my master thesis and in search of a position of Ph.D. student after the graduation. It satisfies me a lot to make every little step on my projects toward human-like and perfection.
                   </p>
                   <div class="white-button">
-                    <a href="#">CV</a>
+                    <a href="CV_Eric_Lu.pdf">CV</a>
                   </div>
                 </div>
               </div>
