--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ https://templatemo.com/tm-531-reflux
               <ul class="main-menu">
                 <li><a href="#section1">About Me</a></li>
                 <li><a href="#section2">Research Projects</a></li>
-                <li><a href="#section3">Profesional Skills</a></li>
+                <li><a href="#section3">Professional Skills</a></li>
                 <li><a href="#section4">Reseach and Work Experience</a></li>
                 <li><a href="#section5">Leadership Experience</a></li>
                 <li><a href="#section6">Contact Me</a></li>
@@ -211,7 +211,7 @@ https://templatemo.com/tm-531-reflux
       <section class="section my-services" data-section="section3">
         <div class="container">
           <div class="section-heading">
-            <h2>Profesional Skills</h2>
+            <h2>Professional Skills</h2>
             <div class="line-dec"></div>
             <span
               >I work with ROS, Python in Daily bases. I know C++ as well.</span
