--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ https://templatemo.com/tm-531-reflux
             <h2>About Me</h2>
             <div class="line-dec"></div>
             <span>
-              I'm now a master student in the field of Robotics in Institute of Eletrcal and Control Engineering, National Chiao Tung University.
+              I'm now a PhD student in the field of Robotics in Department of Electrical, Computer, System Engineering, Rensselaer Polytechnic Institute, advised by Dr. John Wen.
             </span>
           </div>
           <div class="left-image-post">
@@ -99,7 +99,7 @@ https://templatemo.com/tm-531-reflux
                 <div class="right-text">
                   <h4>Robotics Scientist</h4>
                   <p>
-                    Hi, I'm Chen-Lung Eric Lu and I'm a Roboticist. Robots fascinated me with how similar it is with humans. I've been the Team Lead of Team NCTU for the DARPA Subterranean Challenge for the last two events (Urban and Tunnel). Now I'm working on my master thesis and in search of a position of Ph.D. student after the graduation. It satisfies me a lot to make every little step on my projects toward human-like and perfection.
+                    Hi, I'm Chen-Lung Eric Lu and I'm a Roboticist. Robots fascinated me with how similar it is with humans. Now I'm working with Prof. John Wen at Rensselaer Polytechnic Institute, Troy, N.Y., as a Ph.D student and working on industrial robot arm projects and human-robot interactions. Before joining the lab, I was with Prof. Hsueh-Cheng Wang in National Chiao Tnug Institute, Taiwan. I were the Team Lead of Team NCTU for the DARPA Subterranean Challenge for the last two events (Urban and Tunnel).  It satisfies me a lot to make every little step on my projects toward human-like and perfection.
                   </p>
                   <div class="white-button">
                     <a href="CV_Chen-Lung_Eric_Lu.pdf">CV</a>
