update cv and descriptions

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ https://templatemo.com/tm-531-reflux
                 <div class="right-text">
                   <h4>Robotics Scientist</h4>
                   <p>
-                    Hi, I'm Chen-Lung Eric Lu and I'm a Roboticist. Robots fascinated me with how similar it is with humans. Now I'm working with Prof. John Wen at Rensselaer Polytechnic Institute, Troy, N.Y., as a Ph.D student and working on industrial robot arm projects and human-robot interactions. Before joining the lab, I was with Prof. Hsueh-Cheng Wang in National Chiao Tnug Institute, Taiwan. I were the Team Lead of Team NCTU for the DARPA Subterranean Challenge for the last two events (Urban and Tunnel).  It satisfies me a lot to make every little step on my projects toward human-like and perfection.
+                    Hi, I'm Chen-Lung Eric Lu and I'm a Roboticist. Robots fascinated me with how similar it is with humans. My research interests encompass motion optimization and kinematic calibration for robot arms within manufacturing contexts. My research incorporates concepts from robotics, optimization, and control. Additionally, I have experience in semi-autonomous vehicles for search and exploration, utilizing SLAM, deep learning, and reinforcement learning methodologies.
                   </p>
                   <div class="white-button">
                     <a href="CV_Chen-Lung_Eric_Lu.pdf">CV</a>
