update website of Automate

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@ https://templatemo.com/tm-531-reflux
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Robotics Scientist</h4>
+                  <h4>Robotics interests</h4>
                   <p>
-                    Hi, I'm Chen-Lung Eric Lu and I'm a Roboticist. Robots fascinated me with how similar it is with humans. My research interests encompass motion optimization and kinematic calibration for robot arms within manufacturing contexts. My research incorporates concepts from robotics, optimization, and control. Additionally, I have experience in semi-autonomous vehicles for search and exploration, utilizing SLAM, deep learning, and reinforcement learning methodologies.
+                    My research interests encompass motion optimization and kinematic calibration for robot arms within manufacturing contexts. My research incorporates concepts from robotics, optimization, and control. Additionally, I have experience in semi-autonomous vehicles for search and exploration, utilizing SLAM, deep learning, and reinforcement learning methodologies. 
                   </p>
                   <div class="white-button">
                     <a href="CV_Chen-Lung_Eric_Lu.pdf">CV</a>
@@ -116,11 +116,82 @@ https://templatemo.com/tm-531-reflux
           <div class="section-heading">
             <h2>Research Projects</h2>
             <div class="line-dec"></div>
-            <span>
-              I have been working on robotics since the forth year of my bachelor. I started my journey with Duckietown. From there I then became a visiting student in ETHZ, Switzerland, and worked in Institute of Dynamic System and Control (IDSC), Autolab under the supervision of Dr. Jacopo Tani and Dr. Andrea Censi. After coming back to Taiwan, I first kept working on Duckietown in Taiwan branch. From 2019 January, I start working as the Team Lead of NCTU in DARPA Subterranean Challenge.
-            </span>
+            <!-- <span>
+            </span> -->
           </div>
-          <div class="left-image-post">
+          <div class="left-con-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-image">
+                  <img src="assets/images/scan_n_print_testbed.png" alt="" />
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="right-text">
+                  <h4>Convergent Manufacturing (ARM 22-01-F-07)</h4>
+                  <p>
+                    Developed a kinematic calibration framework for robot arms, leveraging motion capture systems to achieve sub-millimeter accuracy in TCP position estimation, significantly surpassing baseline performance by sixfold.
+                  </p>
+                  <p>
+                    Developed a scan-n-print framework for wire arc additive manufacturing, resulting in a 66% smoother deposition than the baseline, while integrating multiple sensor interfaces to enhance manufacturing cell capabilities. 
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="right-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-text">
+                  <h4>Robot Motion Optimization (ARM 21-02-F-19)</h4>
+                  <p>
+                    Developed a full stack robot arm motion optimization framework achieving sub-millimeter accuracy in tracking desired curves in space with the robot arm, surpassing baseline speeds by up to 7.8 times. Created a user-friendly Python interface for FANUC robots, facilitating seamless programming. Successfully implemented and showcased the developed system on GE's dual arm testbed, highlighting practical applications and versatility.  
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="right-image">
+                  <img src="assets/images/robot_motion_optimization.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="left-con-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-image">
+                  <img src="assets/images/happy_real_robot.png" alt="" />
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="right-text">
+                  <h4>Emotional Expressive Robot </h4>
+                  <p>
+                    Designed a control strategy for a 10-degree-of-freedom mobile manipulator to express internal information, focusing on emotions, through motion behaviors. Utilized crowdsourcing to learn the best parameter combinations for expressing different emotions. 
+
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="right-image-post">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="left-text">
+                  <h4>Blind Navigation with a Guiding Robot and UWB Beacons</h4>
+                  <p>
+                    Developed assistive guiding robot to aid individuals with visual impairments in navigating virtual trails using UWB technology. Incorporated semantic sound feedback to intuitively inform users about points-of-interest, improving overall navigation experience for the visually impaired. 
+                  </p>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="right-image">
+                  <img src="assets/images/blind_navigation_RL.jpg" alt="" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="left-con-image-post">
             <div class="row">
               <div class="col-md-6">
                 <div class="left-image">
@@ -137,7 +208,7 @@ https://templatemo.com/tm-531-reflux
               </div>
             </div>
           </div>
-          <div class="right-image-post">
+          <!-- <div class="right-image-post">
             <div class="row">
               <div class="col-md-6">
                 <div class="left-text">
@@ -170,7 +241,7 @@ https://templatemo.com/tm-531-reflux
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="right-image-post">
             <div class="row">
               <div class="col-md-6">
