Update cover photo

--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@ https://templatemo.com/tm-531-reflux
             <div class="row">
               <div class="col-md-6">
                 <div class="left-image">
-                  <img src="assets/images/cover.jpg" alt="" />
+                  <img src="assets/images/robot_portrait_2.jpeg" alt="" />
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="right-text">
-                  <h4>Robotics interests</h4>
+                  <h4>Research Interests</h4>
                   <p>
                     My research interests encompass motion optimization and kinematic calibration for robot arms within manufacturing contexts. My research incorporates concepts from robotics, optimization, and control. Additionally, I have experience in semi-autonomous vehicles for search and exploration, utilizing SLAM, deep learning, and reinforcement learning methodologies. 
                   </p>
